--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ audio:not([controls]) { display: none; }
 [hidden] { display: none; }
 
 html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-body { margin: 0; font-size: 13px; line-height: 1.231; }
+body { margin: 0; font-size: 16px; line-height: 1.231; }
 body, button, input, select, textarea { font-family: sans-serif; color: #222; }
 
 ::-moz-selection { background: #33CCCC; color: #fff; text-shadow: none; }
@@ -150,6 +150,10 @@ nav a:hover {
 	
 }
 
+#main h1{
+	font-size: 30px;
+}
+
 .bio {
 	clear: both;
 	padding: 15px 0 15px 0;
@@ -162,13 +166,18 @@ div.bio:first-child {
 
 .bio h1 {
 	display: inline;
-	font-size: 18px;
+	font-size: 20px;
 }
 
 .team-image {
 	float: right;
 }
 
+
+.hardware-info h2{
+	margin: 0;
+	font-size: 20px;
+}
 
 footer {
 	-moz-box-sizing: border-box;
@@ -185,6 +194,7 @@ footer {
 
 	border-top: 1px solid #28615C;
 	
+	font-size: 12px;
 	color: #86A143;
 }
 
